[project]
name = "stock-chart-gui"
version = "0.1.0"
description = "Stock price chart GUI application using yfinance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.28",
    "plotly>=5.17.0",
    "pandas>=2.1.0",
    "dash>=2.14.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]
